--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,4 @@ production:
   <<: *default
   database: alistair_divorty_production
   username: alistair_divorty
-  password: <%= ENV['ALISTAIR_DIVORTY_DATABASE_PASSWORD'] %>
+  password: <%= ENV['database_password'] %>
